@@ -1,3 +1,9 @@
+Changes by Jacob Barkdull 2016-04-19
+--------------------------------------------------------------------------------
+* Added loading indicators to elements that trigger heavy AJAX requests.
+* Fixed: "0 Likes" remaining displayed after sorting comments by likes.
+
+
 Changes by Jacob Barkdull 2016-03-15
 --------------------------------------------------------------------------------
 * Small style changes for Like, Edit, and Reply hyperlinks
